2004-01-24  Jorn Baayen  <jorn@nl.linux.org>

	* TODO:
	* libmuine/pointer-list-view.c: (scroll_to_path),
	(pointer_list_view_select_next), (pointer_list_view_select_prev):
	* libmuine/pointer-list-view.h:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/HandleView.cs:

	Scrolling improvements.

2004-01-23  Jorn Baayen  <jorn@nl.linux.org>

	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:

	Better feedback when queueing songs.

2004-01-23  Jorn Baayen  <jorn@nl.linux.org>

	* data/glade/AddWindow.glade:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:

	Don't close the add window when queueing stuff.

2004-01-23  Jorn Baayen  <jorn@nl.linux.org>

	* src/Muine.cs:
	* src/PlaylistWindow.cs:

	Restore playlist on startup. (But only the songs that are
	left to be played)

2004-01-23  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.

2004-01-22  Jorn Baayen  <jorn@nl.linux.org>

	* src/PlaylistWindow.cs:

	Fix eos bug spotted by synap.

2004-01-22  Jorn Baayen  <jorn@nl.linux.org>

	* Makefile.am:
	* configure.in:
	* muine.spec.in:

	Added a spec file by Link Dupont <link@subpop.net>

2004-01-22  Jorn Baayen  <jorn@nl.linux.org>

	* src/PlaylistWindow.cs:

	Make artist and title labels selectable.

2004-01-22  Jorn Baayen  <jorn@nl.linux.org>

	* AUTHORS:
	* NEWS:
	* README:
	* TODO:
	* configure.in:
	* data/glade/GroupsWindow.glade:
	* data/glade/Makefile.am:
	* src/About.cs:
	* src/Muine.cs:
	* src/PlaylistWindow.cs:

	Add preliminary GroupsWindow interface, and release 0.2.

2004-01-22  Jorn Baayen  <jorn@nl.linux.org>

	* src/PlaylistWindow.cs:

	Add missing ProgressWindow.Done ()

2004-01-22  Jorn Baayen  <jorn@nl.linux.org>

	* data/glade/ProgressWindow.glade:
	* src/ProgressWindow.cs:

	Progress window polish.

2004-01-22  Jorn Baayen  <jorn@nl.linux.org>

	* data/glade/SearchMusicWindow.glade:
	* data/muine.schemas.in:
	* src/FileSelector.cs:
	* src/PlaylistWindow.cs:
	* src/SearchMusicWindow.cs:
